Derivatives and noise

--- a/My Experiments/Polynomial PDE Noise.ipynb
+++ b/My Experiments/Polynomial PDE Noise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "45a9731c",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
+   "id": "4167efde-b313-4080-96d1-f8497beff11b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from test_data import add_noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "2cf0b8e7",
    "metadata": {},
    "outputs": [],
@@ -57,12 +67,21 @@
     "t = np.linspace(t_0, t_end, nt)\n",
     "tv, xv = np.meshgrid(t, x)\n",
     "\n",
-    "u = 1/(xv + tv)"
+    "u = 1/(xv + tv)\n",
+    "u_noise = add_noise(u,1e-5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "3a3f9e0c-23de-494d-8afb-14e13261420c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "ae2091d6",
    "metadata": {},
    "outputs": [
@@ -111,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "3e5a4e3e",
    "metadata": {},
    "outputs": [
@@ -142,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "0f0cd9e4",
    "metadata": {},
    "outputs": [
@@ -246,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "81b5188f",
    "metadata": {},
    "outputs": [],
