Added Ratio between biggest and smalles singular values

--- a/My Experiments/Robustness Noise SVD.ipynb
+++ b/My Experiments/Robustness Noise SVD.ipynb
@@ -22,9 +22,7 @@
   {
    "cell_type": "markdown",
    "id": "74baf2a1-eb93-46e3-b50e-b936828e23c2",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## SVD Robustness Noise\n",
     "There is a theorem and a corollary:\n",
@@ -40,12 +38,12 @@
    "id": "bbde1ca4-8db6-460a-9262-69c0c0b08ff2",
    "metadata": {},
    "source": [
-    "1. What is the spectral and Frobenius norm of random noise matrices?"
+    "#### 1. What is the spectral and Frobenius norm of random noise matrices?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "de720195-11b5-43f7-b900-8b65deece61e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "id": "1a7d83ee-b748-4229-abbf-f184eb3d30df",
    "metadata": {},
    "outputs": [
@@ -67,14 +65,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.45915531 -1.15444625 -1.2288882 ]\n",
-      " [ 2.1719093  -0.2705615  -0.28800806]\n",
-      " [-1.21734455 -5.42316609 -5.77286712]]\n"
+      "[[ 7.0188849  -0.1483127  -1.02089914]\n",
+      " [-7.65020107 -0.29885615 -2.05715347]\n",
+      " [ 3.2510581   0.38781549  2.66949829]\n",
+      " [ 6.30788505  0.176479    1.21477971]\n",
+      " [-0.17507999 -0.35525025 -2.44533797]\n",
+      " [ 5.08680762 -1.03539496 -7.12706211]\n",
+      " [-8.47585029  1.38522659  9.53510136]\n",
+      " [-5.65634289 -0.86989931 -5.9878854 ]\n",
+      " [-6.27522626  0.20076263  1.38193422]\n",
+      " [ 0.7982208   0.51391097  3.53746689]]\n"
      ]
     }
    ],
    "source": [
-    "rows,cols = 3,3 #let rows be more than columns\n",
+    "rows,cols = 10,3 #let rows be more than columns\n",
     "min_value,max_value = -10,10\n",
     "matrix = np.random.uniform(min_value, max_value, size=(rows, cols))\n",
     "# Set col 2 equal to col 1\n",
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "3f5c47c7-52ba-46d0-9e78-ab99b8055f9d",
    "metadata": {},
    "outputs": [
@@ -93,9 +98,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 [8.93750409e+00 7.97579067e+00 4.16298452e-17]\n",
-      "11.978823655463067\n",
-      "8.937504090704513\n"
+      "2 [1.89024438e+01 1.36719064e+01 3.49696345e-16]\n",
+      "23.328596307199764\n",
+      "18.902443766547503\n"
      ]
     }
    ],
@@ -115,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "be86121c-591d-42f2-bc49-414dd1ff8b77",
    "metadata": {},
    "outputs": [
@@ -123,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Added Gaussian noise with variance 0.003992941218487689\n"
+      "Added Gaussian noise with variance 0.004259199477461676\n"
      ]
     }
    ],
@@ -138,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "id": "47205cab-b830-4bd7-b66b-7be0f2915b46",
    "metadata": {},
    "outputs": [
@@ -147,9 +152,9 @@
      "output_type": "stream",
      "text": [
       "Noise Matrix\n",
-      "Matrix rank: 3, SVD: [0.01051642 0.00330356 0.00099155]\n",
-      "Frobenius norm:\t 0.01106760238468101\n",
-      "Spectral norm:\t 0.010516421205223865\n"
+      "Matrix rank: 3, SVD: [0.01506495 0.01006219 0.00647188]\n",
+      "Frobenius norm:\t 0.01923761220387262\n",
+      "Spectral norm:\t 0.01506495397336334\n"
      ]
     }
    ],
@@ -171,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "56de0019-079f-4504-8d73-86d46f1a818c",
    "metadata": {},
    "outputs": [
@@ -180,17 +185,17 @@
      "output_type": "stream",
      "text": [
       "Noise level \t \t matrix rank \t svd \t \t \t \t \t \t \t Frobenius \t \t \t Spectral\n",
-      " 0      \t \t 2 \t \t [8.93750409e+00 7.97579067e+00 4.16298452e-17]     \t 0.0      \t 0.0\n",
-      " 1e-10      \t \t 3 \t \t [8.93750409e+00 7.97579067e+00 1.73342929e-10]     \t 9.77146205789655e-10      \t 8.325400423076228e-10\n",
-      " 1e-09      \t \t 3 \t \t [8.93750408e+00 7.97579067e+00 4.02728138e-09]     \t 1.2036075904836276e-08      \t 1.106846386414967e-08\n",
-      " 1e-08      \t \t 3 \t \t [8.93750412e+00 7.97579068e+00 2.14905093e-08]     \t 8.405741807218422e-08      \t 7.955507416963593e-08\n",
-      " 1e-07      \t \t 3 \t \t [8.93750377e+00 7.97579170e+00 1.61204686e-07]     \t 1.6498759116360627e-06      \t 1.4045997552417037e-06\n",
-      " 1e-06      \t \t 3 \t \t [8.93750836e+00 7.97578506e+00 3.53986570e-07]     \t 1.4915943786962184e-05      \t 1.248648632870338e-05\n",
-      " 1e-05      \t \t 3 \t \t [8.93749127e+00 7.97587878e+00 6.01833907e-05]     \t 0.0001575800252603395      \t 0.00012692530206300832\n",
-      " 0.0001      \t \t 3 \t \t [8.93723713e+00 7.97518866e+00 5.69159883e-04]     \t 0.0014233683950007825      \t 0.001107030912780282\n",
-      " 0.001      \t \t 3 \t \t [8.93604042e+00 7.97909809e+00 1.46710495e-03]     \t 0.007621724944659658      \t 0.005878039058293\n",
-      " 0.01      \t \t 3 \t \t [8.91924004 7.94620995 0.01594305]     \t 0.11252731961262212      \t 0.07983440332485937\n",
-      " 0.1      \t \t 3 \t \t [9.68183301 7.74805406 0.30686397]     \t 1.511365373711729      \t 1.4380909513057805\n"
+      " 0      \t \t 2 \t \t [2.10690267e-02 1.46498067e-02 2.13228965e-20]     \t 0.0      \t 0.0\n",
+      " 1e-10      \t \t 3 \t \t [2.10690267e-02 1.46498067e-02 8.94639204e-13]     \t 2.432807439508658e-12      \t 1.8139654558488334e-12\n",
+      " 1e-09      \t \t 3 \t \t [2.10690267e-02 1.46498067e-02 1.72808216e-11]     \t 3.092716594131735e-11      \t 2.437341694975883e-11\n",
+      " 1e-08      \t \t 3 \t \t [2.10690267e-02 1.46498068e-02 1.41394625e-10]     \t 2.9247186347575517e-10      \t 2.02412916670624e-10\n",
+      " 1e-07      \t \t 3 \t \t [2.10690261e-02 1.46498077e-02 1.56880505e-09]     \t 3.0316835893845153e-09      \t 2.0282777976639026e-09\n",
+      " 1e-06      \t \t 3 \t \t [2.10690213e-02 1.46498058e-02 7.52940532e-09]     \t 2.125220588023493e-08      \t 1.5191749390801124e-08\n",
+      " 1e-05      \t \t 3 \t \t [2.10690030e-02 1.46497892e-02 1.45364873e-07]     \t 2.2486175056637923e-07      \t 1.6899765905689086e-07\n",
+      " 0.0001      \t \t 3 \t \t [2.10692961e-02 1.46495845e-02 8.22975611e-07]     \t 2.072784657725658e-06      \t 1.4583012851296951e-06\n",
+      " 0.001      \t \t 3 \t \t [2.10706481e-02 1.46507209e-02 1.46854192e-05]     \t 2.7632403288292876e-05      \t 2.201609210006978e-05\n",
+      " 0.01      \t \t 3 \t \t [0.02110642 0.01466299 0.00011438]     \t 0.00022999236285120445      \t 0.0001681709440470997\n",
+      " 0.1      \t \t 3 \t \t [0.02072461 0.01415771 0.00178328]     \t 0.0026357116837849317      \t 0.002141666423599998\n"
      ]
     }
    ],
@@ -214,8 +219,123 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b8306e-dcf0-4fd1-a1e7-76b4eb27fbc8",
+   "id": "ba5ba61f-5f97-4b7d-98ef-871647ffc86e",
    "metadata": {},
+   "source": [
+    "#### 2. What is the ratio between the smallest and biggest singular value?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c378a35-2cc4-42e5-9d96-da93f2214bba",
+   "metadata": {},
+   "source": [
+    "The idea is if $A \\in \\mathbb{R}^{nxm}$ for $m<n$ has full rank $\\frac{\\sigma_1}{\\sigma_m} < \\infty$, but if it does not have full rank $\\frac{\\sigma_1}{\\sigma_m} = \\infty$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "657f4cbb-bf9e-4d4b-bf55-ecb92535bdff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6896726102598775\n",
+      "[[-5.2457179   4.78207113  6.93382782]\n",
+      " [-6.53603156  3.97419979  5.76244399]\n",
+      " [ 4.42032949 -5.37222213 -7.78952513]\n",
+      " [-8.82931129 -6.08315336 -8.82034935]\n",
+      " [ 1.90081875 -1.91986843 -2.78373884]\n",
+      " [-1.74932381 -1.66297943 -2.4112592 ]\n",
+      " [-5.06710477  2.40910389  3.49311232]\n",
+      " [ 8.06350593  6.05010499  8.77243042]\n",
+      " [ 5.94244568  5.1028325   7.39892005]\n",
+      " [-6.77824353 -1.19040041 -1.72603696]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows,cols = 10,3 #let rows be more than columns\n",
+    "min_value,max_value = -10,10\n",
+    "matrix = np.random.uniform(min_value, max_value, size=(rows, cols))\n",
+    "# Set col 2 equal to col 1\n",
+    "alpha = np.random.rand()\n",
+    "print(alpha)\n",
+    "matrix[:, 1] = alpha*matrix[:,2]\n",
+    "#matrix[:, 2] *=1/10000\n",
+    "#matrix[:, 1] *=1/10000\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "e3e8010e-1bcf-4b5f-af01-7fe4fd0cb040",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matrix shape: (10, 3), rank: 2\n",
+      "Singular values : [2.44154200e+01 1.76434861e+01 3.52078150e-15]\n",
+      "Ratio big/smalles singular value: 6934659253920585.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sv = svd(matrix, compute_uv=False)\n",
+    "n=len(sv)\n",
+    "print(f\"matrix shape: {matrix.shape}, rank: {matrix_rank(matrix)}\" )\n",
+    "print(f\"Singular values : {sv}\" )\n",
+    "print(f\"Ratio big/smalles singular value: {sv[0]/sv[n-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "70a247d5-8007-4d19-9daa-ce16bbe3c36c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Noise level \t matrix rank \t sv \t \t \t \t \t   \t  \t ratio\n",
+      " 0\t \t 2 \t \t [2.44154200e+01 1.76434861e+01 3.52078150e-15] \t 6934659253920585.0\n",
+      " 1e-10\t \t 3 \t \t [2.44154200e+01 1.76434861e+01 1.28617383e-09] \t 18982986096.379982\n",
+      " 1e-09\t \t 3 \t \t [2.44154200e+01 1.76434861e+01 1.76733057e-08] \t 1381485751.3403156\n",
+      " 1e-08\t \t 3 \t \t [2.44154200e+01 1.76434862e+01 1.12721494e-07] \t 216599506.69116098\n",
+      " 1e-07\t \t 3 \t \t [2.44154196e+01 1.76434864e+01 1.37778295e-06] \t 17720802.45147129\n",
+      " 1e-06\t \t 3 \t \t [2.44154208e+01 1.76434843e+01 1.79538472e-05] \t 1359899.1111127606\n",
+      " 1e-05\t \t 3 \t \t [2.44153334e+01 1.76434767e+01 1.38858059e-04] \t 175829.43045778398\n",
+      " 0.0001\t \t 3 \t \t [2.44155691e+01 1.76433386e+01 1.29663710e-03] \t 18829.91712258781\n",
+      " 0.001\t \t 3 \t \t [2.44187212e+01 1.76443290e+01 1.37228953e-02] \t 1779.4146784256868\n",
+      " 0.01\t \t 3 \t \t [24.41654029 17.55003095  0.08413519] \t 290.20602475244004\n",
+      " 0.1\t \t 3 \t \t [24.84224849 17.44973367  1.82776766] \t 13.591578973627634\n"
+     ]
+    }
+   ],
+   "source": [
+    "noise_levels = [0]+[10**(-10+i) for i in range(0,10)]\n",
+    "print(\"Noise level \\t matrix rank \\t sv \\t \\t \\t \\t \\t   \\t  \\t ratio\")\n",
+    "for target_noise in noise_levels:\n",
+    "    var = target_noise * np.sqrt(np.mean(np.square(matrix)))\n",
+    "    noise = np.random.normal(0, var, size=matrix.shape)\n",
+    "    matrix_noise = matrix+noise\n",
+    "    sv = svd(matrix_noise, compute_uv=False)\n",
+    "    print(f\" {target_noise}\\t \\t {matrix_rank(matrix_noise)} \\t \\t {sv} \\t {sv[0]/sv[n-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76b8306e-dcf0-4fd1-a1e7-76b4eb27fbc8",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Finite Difference Noise"
    ]
