--- a/My Experiments/Robustness Noise SVD.ipynb
+++ b/My Experiments/Robustness Noise SVD.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "markdown",
    "id": "74baf2a1-eb93-46e3-b50e-b936828e23c2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## SVD Robustness Noise\n",
     "There is a theorem and a corollary:\n",
