Changed directory structure

--- a/Noise Experiments/Linear PDE Noise.ipynb
+++ b/Noise Experiments/Linear PDE Noise.ipynb
@@ -2,10 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "eda08ee5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-19 10:11:38,003 [INFO] \n",
+      "Limited Total Variation Regularization Support Detected! \n",
+      "---> CVXPY is not installed. \n",
+      "---> Many Total Variation Methods require CVXPY including: \n",
+      "---> velocity, acceleration, jerk, jerk_sliding, smooth_acceleration\n",
+      "---> Please install CVXPY to use these methods.\n",
+      "---> Recommended to also install MOSEK and obtain a MOSEK license.\n",
+      "You can still use: total_variation_regularization.iterative_velocity\n",
+      "\n",
+      "2024-01-19 10:11:38,052 [INFO] \n",
+      "Limited Linear Model Support Detected! \n",
+      "---> PYCHEBFUN is not installed. \n",
+      "---> Install pychebfun to use chebfun derivatives (https://github.com/pychebfun/pychebfun/) \n",
+      "You can still use other methods \n",
+      "\n",
+      "2024-01-19 10:11:38,058 [INFO] \n",
+      "Limited Linear Model Support Detected! \n",
+      "---> CVXPY is not installed. \n",
+      "---> Install CVXPY to use lineardiff derivatives \n",
+      "You can still use other methods \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,11 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "44edb537",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')  \n",
     "from numpy.linalg import matrix_rank, svd\n",
     "from test_data import experiment_data,add_noise,normalise_frobenius,normalise_minmax\n",
     "def compute_distance_svs(u,dx,fd_orders=range(2,8),normalise=None):\n",
@@ -73,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "24de02cd-2c1a-410e-bacd-134e5f61f58f",
    "metadata": {},
    "outputs": [
@@ -82,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "linear_nonunique_1\n",
-      "exp(-0.741146843060084*t + x)\n"
+      "exp(1.7497654730547*t + x)\n"
      ]
     }
    ],
