--- a/Noise Experiments/Polynomial PDE Noise.ipynb
+++ b/Noise Experiments/Polynomial PDE Noise.ipynb
@@ -39,6 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')  \n",
     "from test_data import experiment_data,add_noise,normalise_frobenius,normalise_minmax"
    ]
   },
