Added some anaylsis/Thresholds for the reversed condition: omin/omax

--- a/Noise Analysis/Threshold.ipynb
+++ b/Noise Analysis/Threshold.ipynb
@@ -1026,7 +1026,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "5258b7fe-21c7-4430-8f01-4d264f254e1a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
