Added upper bound for finite differences for different orders of derivative, left to do is test if it works

--- a/Noise Analysis/Threshold for reversed conditoin.ipynb
+++ b/Noise Analysis/Threshold for reversed conditoin.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "04e4b850-e02a-468f-80e2-9903e2df234c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "abec7d10-df39-4172-b61c-de3b11d164f7",
    "metadata": {},
    "outputs": [],
@@ -111,17 +111,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6437968355895725\n",
-      "[[-3175354.91804863 -4890512.40832793 -4932231.32285316]\n",
-      " [ -206691.06496733 -1550146.89912333  -321050.14119562]\n",
-      " [-2532673.52185956  -718650.23539556 -3933963.91819821]\n",
-      " [-2860033.63981402  -601603.2927043  -4442447.49540415]\n",
-      " [-2746678.85357911 -4333332.12438998 -4266375.20059224]\n",
-      " [ -679716.98484865 -4773896.59019101 -1055794.2308402 ]\n",
-      " [-1999414.45431896 -4218502.78056834 -3105660.58077616]\n",
-      " [-1576227.24409148 -3063064.2597682  -2448330.21375138]\n",
-      " [-3160027.54202686 -1515153.07631598 -4908423.53882182]\n",
-      " [-2867638.3338122  -3479825.28290886 -4454259.75290185]]\n"
+      "0.04080346406585722\n",
+      "[[-5.90189951e-02 -2.28833637e+06 -2.56592852e+06]\n",
+      " [-1.90908362e-01 -9.44827223e+05 -2.17630588e+06]\n",
+      " [-1.87323610e-01 -1.90937642e+06 -4.37076903e+06]\n",
+      " [-1.61524547e-01 -3.95449553e+06 -4.73095956e+06]\n",
+      " [-1.47900542e-01 -2.97269982e+06 -3.25241907e+06]\n",
+      " [-8.67741692e-02 -3.85851874e+06 -9.72079474e+05]\n",
+      " [-1.29815327e-03 -1.22784334e+06 -1.70279255e+06]\n",
+      " [-2.62825369e-02 -3.00460302e+06 -4.41561035e+06]\n",
+      " [-3.29851465e-02 -2.31834360e+06 -4.47704554e+06]\n",
+      " [-1.27698524e-01 -3.01458131e+05 -4.66483369e+06]]\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
     "# Set col 2 equal to col 1\n",
     "alpha = np.random.rand()\n",
     "print(alpha)\n",
-    "matrix[:,0] = alpha*matrix[:,2]\n",
+    "matrix[:,0] = 1e-6*alpha*matrix[:,0]\n",
     "print(matrix)"
    ]
   },
@@ -146,11 +146,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "matrix shape: (10, 3), rank: 2\n",
-      "Singular values : [1.66253105e+07 5.46774831e+06 6.59922839e-10]\n",
-      "Ratio smallest/biggest singular value: 3.969386551808205e-17\n",
+      "matrix shape: (10, 3), rank: 3\n",
+      "Singular values : [1.33700936e+07 3.86138169e+06 2.17962427e-01]\n",
+      "Ratio smallest/biggest singular value: 1.6302236412628922e-08\n",
       "Bound: 0.0\n",
-      "Ratio smallest/Frobenius norm: 3.77069696104621e-17\n",
+      "Ratio smallest/Frobenius norm: 1.566213008175414e-08\n",
       "Bound: 0.0\n"
      ]
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a754221d-2e47-4fa7-b1a3-180872f45f53",
    "metadata": {},
    "outputs": [
@@ -179,17 +179,17 @@
      "output_type": "stream",
      "text": [
       "Noise level \t matrix rank \t diff \t \t bound \t \t diff_approx \t bound_approx\n",
-      " 0\t \t 2 \t \t 0.000e+00  \t 0.000e+00\t0.000e+00  \t 0.000e+00\n",
-      " 1e-10\t \t 3 \t \t 4.153e-11  \t 4.071e-07\t3.945e-11  \t 9.484e-11\n",
-      " 1e-09\t \t 3 \t \t 3.829e-10  \t 3.756e-06\t3.637e-10  \t 8.751e-10\n",
-      " 1e-08\t \t 3 \t \t 7.144e-09  \t 4.958e-05\t6.786e-09  \t 1.155e-08\n",
-      " 1e-07\t \t 3 \t \t 8.356e-08  \t 4.652e-04\t7.937e-08  \t 1.084e-07\n",
-      " 1e-06\t \t 3 \t \t 3.216e-07  \t 4.453e-03\t3.055e-07  \t 1.037e-06\n",
-      " 1e-05\t \t 3 \t \t 7.541e-06  \t 4.891e-02\t7.163e-06  \t 1.139e-05\n",
-      " 0.0001\t \t 3 \t \t 2.589e-05  \t 3.295e-01\t2.460e-05  \t 7.676e-05\n",
-      " 0.001\t \t 3 \t \t 4.103e-04  \t 4.153e+00\t3.897e-04  \t 9.675e-04\n",
-      " 0.01\t \t 3 \t \t 4.563e-03  \t 3.529e+01\t4.335e-03  \t 8.222e-03\n",
-      " 0.1\t \t 3 \t \t 6.627e-02  \t 4.271e+02\t6.265e-02  \t 9.951e-02\n"
+      " 0\t \t 3 \t \t 1.630e-08  \t [1.33700936e+07 3.86138169e+06 2.17962427e-01]\n",
+      " 1e-10\t \t 3 \t \t 1.630e-08  \t [1.33700936e+07 3.86138169e+06 2.17919311e-01]\n",
+      " 1e-09\t \t 3 \t \t 1.618e-08  \t [1.33700936e+07 3.86138169e+06 2.16262073e-01]\n",
+      " 1e-08\t \t 3 \t \t 1.541e-08  \t [1.33700936e+07 3.86138173e+06 2.06097857e-01]\n",
+      " 1e-07\t \t 3 \t \t 5.306e-08  \t [1.33700938e+07 3.86138158e+06 7.09431879e-01]\n",
+      " 1e-06\t \t 3 \t \t 5.118e-07  \t [1.33700900e+07 3.86138003e+06 6.84273410e+00]\n",
+      " 1e-05\t \t 3 \t \t 6.054e-06  \t [1.33700448e+07 3.86139393e+06 8.09453926e+01]\n",
+      " 0.0001\t \t 3 \t \t 7.377e-05  \t [1.33699778e+07 3.86090099e+06 9.86300597e+02]\n",
+      " 0.001\t \t 3 \t \t 4.099e-04  \t [1.33735944e+07 3.86152043e+06 5.48244505e+03]\n",
+      " 0.01\t \t 3 \t \t 6.419e-03  \t [13356325.15178646  3874377.04356511    85732.33558967]\n",
+      " 0.1\t \t 3 \t \t 6.500e-02  \t [13147483.1588706   3843357.96505866   854556.82058516]\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
     "    ratios_approx.append(ratio_approx)\n",
     "    differences_approx.append(difference_approx)\n",
     "    bounds_approx.append(bound_approx)\n",
-    "    print(f\" {target_noise}\\t \\t {matrix_rank(matrix_noise)} \\t \\t {difference:3.3e}  \\t {bound:3.3e}\\t{difference_approx:3.3e}  \\t {bound_approx:3.3e}\")"
+    "    print(f\" {target_noise}\\t \\t {matrix_rank(matrix_noise)} \\t \\t {ratio:3.3e}  \\t {sv}\")"
    ]
   },
   {
