Added derivative calulation without boundary values in Test Reversed Condition, fixed xlabels - orders in plots

--- a/Experiments Ambiguity Paper/Analytic PDE ambiguous Noise.ipynb
+++ b/Experiments Ambiguity Paper/Analytic PDE ambiguous Noise.ipynb
@@ -14,7 +14,163 @@
     "from sklearn.linear_model import Lasso\n",
     "from scipy.io import loadmat\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from scipy.integrate import solve_ivp\n",
+    "from scipy.integrate import solve_ivpimport numpy as np\n",
+    "##############################################################\n",
+    "####   Functions for bounding finite differences error   #####\n",
+    "##############################################################\n",
+    "\"\"\"\n",
+    "Computes the coefficients of the derivitve of the kth Lagrangian Coefficients.\n",
+    "These are also the coefficients used for finite differences.\n",
+    "n: number of data points used for approximation/ order\n",
+    "k: number of lagrange coefficient\n",
+    "l: input to lagrange coefficient: x = x_l = x+ hl\n",
+    "\"\"\"\n",
+    "def lagrange_coefficient_derivative(n,k,l):\n",
+    "    erg=0.0        \n",
+    "    for j in range(n+1):\n",
+    "        if j!=k:\n",
+    "            tmp =1.0\n",
+    "            for i in range(n+1):\n",
+    "                  if i!=k and i!=j:\n",
+    "                    tmp *=(l-i)/(k-i)\n",
+    "                    #print(f\"l-k = {l}-{i}\")\n",
+    "            tmp*=1.0/(k-j)\n",
+    "            erg+=tmp\n",
+    "    return erg\n",
+    "    \n",
+    "\"\"\"\n",
+    "Sums up the above coefficients and is needed for calculating the measurment error\n",
+    "n: number of data points used for approximation/ order\n",
+    "l: input to lagrange coefficient: x = x_l = x+ hl\n",
+    "\"\"\"\n",
+    "def sum_lagrange_coefficient_derivative(n,l):\n",
+    "    erg=0.0\n",
+    "    for k in range(n+1):\n",
+    "        #print(f\"L({n},{k},{l}) = {lagrange_coefficient_derivative(n,k,l)}\")\n",
+    "        erg+= np.abs(lagrange_coefficient_derivative(n,k,l))\n",
+    "    return erg\n",
+    "\n",
+    "\"\"\"\n",
+    "Approximation error for central differences: reduces with higher order\n",
+    "The approximation error is caused by finite differences itself.\n",
+    "\"\"\"\n",
+    "def appr_error_central_diff(order):\n",
+    "    assert(order%2==0) #Check if n is even\n",
+    "    bound = (np.math.factorial(int(order/2))**2)/np.math.factorial(order+1)\n",
+    "    return bound\n",
+    "    \n",
+    "# Approximation error backward differences\n",
+    "def appr_error_backward_diff(n):\n",
+    "    return 1/(n+1)\n",
+    "\n",
+    "\"\"\"\n",
+    "Measurement error for central differences.\n",
+    "The measurement error is caused round off errors and does not decrease for higher order.\n",
+    "\"\"\"\n",
+    "def meas_error_central_diff(n):\n",
+    "    assert(n%2==0) #Check if n is even\n",
+    "    erg=sum_lagrange_coefficient_derivative(n,n/2)\n",
+    "    return erg\n",
+    "    \n",
+    "# Measurement error backward differences\n",
+    "def meas_error_backward_diff(n):\n",
+    "    erg=sum_lagrange_coefficient_derivative(n,0)\n",
+    "    return erg\n",
+    "    \n",
+    "\"\"\"\n",
+    "Error bound on the first derivative calculated with finite differences\n",
+    "eps: measurement error+round of error\n",
+    "h: dx for equispaced data\n",
+    "M: bound on (order+1)th derivative\n",
+    "\"\"\"\n",
+    "def error_bound_finite_diff(eps,h,M,order=2):\n",
+    "    eps+=np.finfo(float).eps # add machine precisoin\n",
+    "    if order%2==0: #even order\n",
+    "        C_app=appr_error_central_diff(order)\n",
+    "        C_meas=meas_error_central_diff(order)\n",
+    "    else: # odd order\n",
+    "        C_app=appr_error_backward_diff(order)\n",
+    "        C_meas=meas_error_backward_diff(order)\n",
+    "    #print(f\" C_meas*eps/h + (h**order)*M*C_app = {C_meas:2.3e}*{eps:2.3e}/{h:2.3e} + {h**order:2.3e}*{M:2.3e}*{C_app:2.3e}\")    \n",
+    "    return C_meas*eps/h + (h**order)*M*C_app\n",
+    "            \n",
+    "def infinity_norm(x):\n",
+    "    return np.max(np.abs(x))\n",
+    "\n",
+    "##############################################################\n",
+    "####       Functions for bounding condition error        #####\n",
+    "##############################################################\n",
+    "\"\"\"\n",
+    "Computes error_bound  for ||g-g_noise||_F^2, where g=(u ux)\n",
+    "eps_two: ||u-u_noise||_2 two norm\n",
+    "eps_infty: ||u-u_noise||_infty infinity norm\n",
+    "h: dx for equispaced data\n",
+    "number_datapoints: number of total datapoints where u is evaluated\n",
+    "M: bound on nth derivative depending on the order\n",
+    "\"\"\"\n",
+    "def error_bound_g(eps_two,eps_infty,h,number_datapoints,M,order):\n",
+    "    E = eps_two**2 + number_datapoints*error_bound_finite_diff(eps_infty,h,M,order)**2\n",
+    "    return E\n",
+    "\n",
+    "\"\"\"\n",
+    "Computes total error on condition o1/o2 without considering the supremum\n",
+    "E: error bound on ||g-g_noise||_F^2 calculated in above functions\n",
+    "sv_max: highest singular value on matrix without noise\n",
+    "sv_min: lowest singular value on matrix without noise\n",
+    "\"\"\"\n",
+    "def error_bound_condition(E,sv_max,sv_min):\n",
+    "    bound = np.sqrt(1/sv_min+(sv_max/sv_min**2)**2*E)\n",
+    "    return bound\n",
+    "\n",
+    "\n",
+    "##############################################################\n",
+    "#### Functions for bounding reversed condition error     #####\n",
+    "##############################################################\n",
+    "\n",
+    "\"\"\"\n",
+    "This function should upper bound the reversed condition for singular matrices \n",
+    "where on>C2>0\n",
+    "C1:lower bound of biggest singular value: C <= o_max\n",
+    "eps: lower obund for frobenius norm of error matrix |E|_F <= eps\n",
+    "\"\"\"\n",
+    "def upper_bound_singular_matrix(C,eps):\n",
+    "    if C-eps<=0:\n",
+    "        print(f\"Error is too big C<eps with C = {C:.3e}, eps = {eps:.3e}: no upper bound can be calculated\")\n",
+    "        return 1.0\n",
+    "        \n",
+    "    bound= eps/(C-eps)*np.sqrt(1+(eps/(C-eps))**2) \n",
+    "    bound = min(bound, 1.0) # o_min/o_max <=1 in all cases\n",
+    "    return bound\n",
+    "\n",
+    "\"\"\"\n",
+    "This function should lower bound the reversed condition for nonsingular matrices \n",
+    "where on>C2>0\n",
+    "C1: upper bound for o1 < C1\n",
+    "C2: lower bound for on > C2 > 0\n",
+    "eps: lower obund for frobenius norm of error matrix |E|_F <= eps\n",
+    "The question is how to choose C2??\n",
+    "\"\"\"\n",
+    "def lower_bound_nonsingular_matrix(C1,C2,eps):\n",
+    "    bound= (C2-eps)/(C1+eps)\n",
+    "    bound = max(bound,1e-10)\n",
+    "    return bound\n",
+    "    \n",
+    "\"\"\"Threshold if values are beneath classify as non unique PDE\n",
+    "E: upper bound on the frobenius  |g-g_noise|_frobenius <=E where g =(u|u_x|...)\n",
+    "C: lower bound of biggest singular value: C <= o_max\n",
+    "\"\"\"\n",
+    "def calc_threshold_nonuniq(E,C):\n",
+    "    T = upper_bound_singular_matrix(C,E)\n",
+    "    return T\n",
+    "    \n",
+    "\"\"\"Threshold if values are above classify as unique PDE\n",
+    "E: upper bound on the frobenius  |g-g_noise|_frobenius <=E where g =(u|u_x|...)\n",
+    "C1: upper bound of biggest singular value: C1 => o_max\n",
+    "C2: upper bound of biggest singular value: C2 <= o_max\n",
+    "\"\"\"\n",
+    "def calc_threshold_uniq(C1,C2,E):\n",
+    "    T = lower_bound_nonsingular_matrix(C1,C2,E)\n",
+    "    return T\n",
     "import os\n",
     "\n",
     "import pysindy as ps\n",
@@ -677,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
