Started with computing threshholds

--- a/Noise Analysis/JRC_analysis.ipynb
+++ b/Noise Analysis/JRC_analysis.ipynb
@@ -56,10 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 343,
    "id": "72b468e4-7331-4bb0-945e-2893b24a2eed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a -0.4391056880759973\n"
+     ]
+    }
+   ],
    "source": [
     "n_samples=50\n",
     "T,X,t,x = create_data_2d(T_start=-2, T_end=2, L_x_start=0,L_x_end=5, N_t=n_samples, N_x=n_samples)\n",
@@ -87,6 +95,7 @@
     "utx = a*np.sinh(T*a)/(np.sqrt(1 - 1/np.cosh(T*a)**2)*np.cosh(T*a)**2)\n",
     "uxx = np.zeros(X.shape)\n",
     "\"\"\"\n",
+    "print(f\"a {a}\")\n",
     "dt=t[1]-t[0]\n",
     "dx=x[1]-x[0]"
    ]
@@ -101,33 +110,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 344,
    "id": "ef154aba-0e4c-4681-ad8b-b130e49258b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Compare the derivatives\n",
+    "fd_order=2\n",
+    "ut_fd = ps.FiniteDifference(order=fd_order, d=1, axis=1, drop_endpoints=True)._differentiate(u, t=dt)\n",
+    "utx_fd = ps.FiniteDifference(order=fd_order, d=1, axis=0, drop_endpoints=True)._differentiate(ut_fd, dx)\n",
+    "ux_fd = ps.FiniteDifference(order=fd_order, d=1, axis=0, drop_endpoints=True)._differentiate(u, dx)\n",
+    "uxx_fd = ps.FiniteDifference(order=fd_order, d=2, axis=0, drop_endpoints=True)._differentiate(u, dx) \n",
+    "\n",
+    "#Filter out the boundary values\n",
+    "ut = ut[~np.isnan(ut_fd).all(axis=1)][:, ~np.isnan(ut_fd).all(axis=0)]\n",
+    "ut_fd= ut_fd[~np.isnan(ut_fd).all(axis=1)][:, ~np.isnan(ut_fd).all(axis=0)]\n",
+    "\n",
+    "utx = utx[~np.isnan(utx_fd).all(axis=1)][:, ~np.isnan(utx_fd).all(axis=0)]\n",
+    "utx_fd= utx_fd[~np.isnan(utx_fd).all(axis=1)][:, ~np.isnan(utx_fd).all(axis=0)]\n",
+    "\n",
+    "ux = ux[~np.isnan(ux_fd).all(axis=1)][:, ~np.isnan(ux_fd).all(axis=0)]\n",
+    "ux_fd= ux_fd[~np.isnan(ux_fd).all(axis=1)][:, ~np.isnan(ux_fd).all(axis=0)]\n",
+    "\n",
+    "uxx = uxx[~np.isnan(uxx_fd).all(axis=1)][:, ~np.isnan(uxx_fd).all(axis=0)]\n",
+    "uxx_fd= uxx_fd[~np.isnan(uxx_fd).all(axis=1)][:, ~np.isnan(uxx_fd).all(axis=0)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "id": "6808292b-fda6-4bce-a14f-d8f0c399d480",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.240011556883676"
+      ]
+     },
+     "execution_count": 345,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "infinity_norm(a**(fd_order+1)*u)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "id": "38020808-dc5b-4b4c-8f00-d03ec118efe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "156.8353028960975"
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "infinity_norm(a*u)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e34cd4-e9a3-43d8-a375-0c8f7e40f69f",
+   "metadata": {},
+   "source": [
+    "Lets calculate an upper bound for the different derivatives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "id": "20e69329-721c-48ac-8697-ebf7ed1cd322",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " |ut_fd - ut | = 7.237e-02\n",
-      " |utx_fd - utx | = 1.620e+00\n",
-      " |ux_fd - ux | = 5.673e+00\n",
-      " |uxx_fd - uxx | = 1.020e+01\n"
+      " |ut_fd - ut| \t= 2.821e-01 <= 3.359e-02\n",
+      " |ux_fd - ux| \t= 4.886e+00 <= 6.198e-01\n",
+      " |uxx_fd - uxx|\t= 2.443e+00 <= 3.719e+00\n",
+      " |utx_fd - utx|\t= 2.321e+00 <= 5.917e-01\n"
      ]
     }
    ],
    "source": [
-    "#Compare the derivatives\n",
-    "fd_order=2\n",
-    "ut_fd = ps.FiniteDifference(order=fd_order, d=1, axis=1, drop_endpoints=False)._differentiate(u, t=dt)\n",
-    "utx_fd = ps.FiniteDifference(order=fd_order, d=1, axis=0, drop_endpoints=False)._differentiate(ut_fd, dx)\n",
-    "ux_fd = ps.FiniteDifference(order=fd_order, d=1, axis=0, drop_endpoints=False)._differentiate(u, dx)\n",
-    "uxx_fd = ps.FiniteDifference(order=fd_order, d=2, axis=0, drop_endpoints=False)._differentiate(u, dx) \n",
+    "eps=1e-16\n",
     "\n",
-    "print(f\" |ut_fd - ut | = {np.linalg.norm(ut_fd-ut):.3e}\")\n",
-    "print(f\" |utx_fd - utx | = {np.linalg.norm(utx_fd-utx):.3e}\")\n",
-    "print(f\" |ux_fd - ux | = {np.linalg.norm(ux_fd-ux):.3e}\")\n",
-    "print(f\" |uxx_fd - uxx | = {np.linalg.norm(uxx_fd-uxx):.3e}\")"
+    "bound_ut = upper_bound_central_differences(eps,fd_order,order_derivative=1,Cu=infinity_norm(a**(fd_order+1)*u),Cxi=1.0,h=dt)\n",
+    "bound_ux = upper_bound_central_differences(eps,fd_order,order_derivative=1,Cu=infinity_norm(u),Cxi=1.0,h=dx)\n",
+    "bound_uxx = upper_bound_central_differences(eps,fd_order,order_derivative=2,Cu=infinity_norm(u),Cxi=3.0,h=dx)\n",
+    "bound_utx = upper_bound_central_differences(bound_ut,fd_order,order_derivative=1,Cu=infinity_norm(ut),Cxi=1.0,h=dx)\n",
+    "\n",
+    "print(f\" |ut_fd - ut| \\t= {np.linalg.norm(ut_fd-ut):.3e} <= {bound_ut:.3e}\")\n",
+    "print(f\" |ux_fd - ux| \\t= {np.linalg.norm(ux_fd-ux):.3e} <= {bound_ux:.3e}\")\n",
+    "print(f\" |uxx_fd - uxx|\\t= {np.linalg.norm(uxx_fd-uxx):.3e} <= {bound_uxx:.3e}\")\n",
+    "print(f\" |utx_fd - utx|\\t= {np.linalg.norm(utx_fd-utx):.3e} <= {bound_utx:.3e}\")"
    ]
   },
   {
@@ -393,7 +480,11 @@
    "cell_type": "code",
    "execution_count": 265,
    "id": "65c1b400-67cb-4b96-b7da-2416ec330954",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
