changes to JRC_analysis.ipynb

--- a/experiments/JRC_analysis.ipynb
+++ b/experiments/JRC_analysis.ipynb
@@ -18,7 +18,7 @@
     "import sys\n",
     "import pandas as pd\n",
     "import sympy\n",
-    "sys.path.append('../')  \n",
+    "#sys.path.append('../')  \n",
     "\n",
     "import pysindy as ps\n",
     "# Seed the random number generators for reproducibility\n",
